; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_ipmac.c_hash_ipmac4_data_list.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/ipset/extr_ip_set_hash_ipmac.c_hash_ipmac4_data_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.hash_ipmac4_elem = type { i32, i32 }

@IPSET_ATTR_IP = common dso_local global i32 0, align 4
@IPSET_ATTR_ETHER = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.hash_ipmac4_elem*)* @hash_ipmac4_data_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_ipmac4_data_list(%struct.sk_buff* %0, %struct.hash_ipmac4_elem* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.hash_ipmac4_elem*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.hash_ipmac4_elem* %1, %struct.hash_ipmac4_elem** %5, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %7 = load i32, i32* @IPSET_ATTR_IP, align 4
  %8 = load %struct.hash_ipmac4_elem*, %struct.hash_ipmac4_elem** %5, align 8
  %9 = getelementptr inbounds %struct.hash_ipmac4_elem, %struct.hash_ipmac4_elem* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @nla_put_ipaddr4(%struct.sk_buff* %6, i32 %7, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %22, label %13

13:                                               ; preds = %2
  %14 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %15 = load i32, i32* @IPSET_ATTR_ETHER, align 4
  %16 = load i32, i32* @ETH_ALEN, align 4
  %17 = load %struct.hash_ipmac4_elem*, %struct.hash_ipmac4_elem** %5, align 8
  %18 = getelementptr inbounds %struct.hash_ipmac4_elem, %struct.hash_ipmac4_elem* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @nla_put(%struct.sk_buff* %14, i32 %15, i32 %16, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %13, %2
  br label %24

23:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %25

24:                                               ; preds = %22
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @nla_put_ipaddr4(%struct.sk_buff*, i32, i32) #1

declare dso_local i64 @nla_put(%struct.sk_buff*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
